# flatpak-external-data-checker

./: .coveragerc  .flake8  .gitignore  .mypy.ini  .pre-commit-config.yaml  CONTRIBUTING.md  Dockerfile  Jenkinsfile  README.md  canonicalize-manifest  dependencies.apt.txt  flatpak-external-data-checker  org.flathub.flatpak-external-data-checker.yml  pyproject.toml  requirements.txt  run-in-container.sh  run_lints.sh  run_tests.sh
.github/: dependabot.yml
.github/workflows/: run-tests.yml
data/: org.flathub.flatpak-external-data-checker.metainfo.xml  source-state.schema.json
src/: checker.py  flatpak-external-data-checker  flatpak-extra-data-checker  main.py  manifest.py
src/checkers/: __init__.py  anityachecker.py  chromiumchecker.py  cvechecker.py  debianrepochecker.py  electronchecker.py  firefoxchecker.py  flashchecker.py  gitchecker.py  gnomechecker.py  htmlchecker.py  jetbrainschecker.py  jsonchecker.py  pypichecker.py  rotatingurlchecker.py  rpmrepochecker.py  rustchecker.py  snapcraftchecker.py  submodulechecker.py  urlchecker.py
src/lib/: __init__.py  appdata.py  checkers.py  utils.py  (+6 more)
tests/: com.adobe.Flash-Player-Projector.json  com.adobe.FlashPlayer.NPAPI.json  com.google.Chrome.yaml  com.heroicgameslauncher.hgl.yaml  com.jetbrains.PhpStorm.json  com.nordpass.NordPass.yaml  com.tencent.WeChat.yaml  com.unity.UnityHub.yaml  com.valvesoftware.Steam.yml  com.virustotal.Uploader.yml  com.visualstudio.code.yaml  fedc.test.ElectronChecker.yml  firefox-sources.json  io.github.stedolan.jq.yml  net.invisible_island.xterm.appdata.xml  net.invisible_island.xterm.yml  org.chromium.Chromium.yaml  org.cvechecker.Manifest.json  org.debian.tracker.pkg.apt.yml  org.externaldatachecker.Manifest.json  org.flatpak.Flatpak.yml  org.freedesktop.Sdk.Extension.rust-nightly.yml  org.gnome.baobab.json  org.mozilla.Firefox.json  org.x.xeyes.yml  org.xdebug.Xdebug.json  phony-external-source-single-item.json  phony-external-source.json  phony-shared-module.json  phony-too-large-generated-sources.json  test_anityachecker.py  test_anytiachecker.py  test_appdata.py  test_checker.py  test_chromiumchecker.py  test_debianrepochecker.py  test_electronchecker.py  test_firefoxchecker.py  test_flashchecker.py  test_gitchecker.py  (+19 more)
wrappers/: jenkins-check-flatpak-external-apps
